tests/transpiler/x/scala/tree_sum.error
exit status 1
/workspace/mochi/tests/transpiler/x/scala/tree_sum.scala:5: error: not found: value Leaf
    return t match { case Leaf => 0 case Node(left, value, right) => sum_tree(left) + value + sum_tree(right) }
                          ^
/workspace/mochi/tests/transpiler/x/scala/tree_sum.scala:5: error: not found: value Node
    return t match { case Leaf => 0 case Node(left, value, right) => sum_tree(left) + value + sum_tree(right) }
                                         ^
/workspace/mochi/tests/transpiler/x/scala/tree_sum.scala:10: error: not found: type Node
    val t: Node = Node(Leaf, 1, Node(Leaf, 2, Leaf))
           ^
/workspace/mochi/tests/transpiler/x/scala/tree_sum.scala:10: error: not found: value Node
    val t: Node = Node(Leaf, 1, Node(Leaf, 2, Leaf))
                  ^
/workspace/mochi/tests/transpiler/x/scala/tree_sum.scala:10: error: not found: value Leaf
    val t: Node = Node(Leaf, 1, Node(Leaf, 2, Leaf))
                       ^
/workspace/mochi/tests/transpiler/x/scala/tree_sum.scala:10: error: not found: value Node
    val t: Node = Node(Leaf, 1, Node(Leaf, 2, Leaf))
                                ^
/workspace/mochi/tests/transpiler/x/scala/tree_sum.scala:10: error: not found: value Leaf
    val t: Node = Node(Leaf, 1, Node(Leaf, 2, Leaf))
                                     ^
/workspace/mochi/tests/transpiler/x/scala/tree_sum.scala:10: error: not found: value Leaf
    val t: Node = Node(Leaf, 1, Node(Leaf, 2, Leaf))
                                              ^
8 errors found
