tests/transpiler/x/scala/tree_sum.scala
// Generated by Mochi v0.10.33 on 2025-07-21 16:43:41 GMT+7
import scala.collection.mutable.{ArrayBuffer, Map}
object Main {
  def sum_tree(t: Any): Int = {
    return t match { case Leaf => 0 case Node(left, value, right) => sum_tree(left) + value + sum_tree(right) }
  }

  def main(args: Array[String]): Unit = {
    case class Tree()
    val t: Node = Node(Leaf, 1, Node(Leaf, 2, Leaf))
    println(sum_tree(t))
  }
}
